# GamePlatform

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  CRTPExperiment.sln  CRTPExperiment.vcxproj  CRTPExperiment.vcxproj.filters  GamePlatform.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_log.txt  install_log.txt  test_parse.py  vcpkg.json
.github/: copilot-instructions.md
CRTPExperiment/: CMakeLists.txt  main.cpp
CRTPExperiment.dir/Debug/: CRTPExperiment.exe.recipe  CRTPExperiment.ilk
CRTPExperiment.dir/Debug/CRTPExperiment.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CRTPExperiment.lastbuildstate  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ClientShared/: CMakeLists.txt
ClientShared/Shaders/: fs_ui.sc  vs_ui.sc
ClientShared/include/ClientShared/: Console.h  Export.h  PlatformWindow.h  Viewport.h
ClientShared/include/ClientShared/Rendering/: BgfxRenderer.h  FontAtlas.h  Shader.h  Texture2D.h
ClientShared/src/: Console.cpp  PlatformWindow.cpp  Viewport.cpp
ClientShared/src/Rendering/: BgfxRenderer.cpp  Shader.cpp  Texture2D.cpp
Content/Fonts/ZTNature/: ZTNatureFamily.json
Engine/: .reflectionignore  CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  main.cpp  reflection_data.json
Engine/Assets/: AssetBase.cpp  AssetBase.h  AssetData.cpp  AssetData.h  AssetHandle.cpp  AssetHandle.h  AssetSystem.cpp  AssetSystem.h  FontFaceAsset.cpp  FontFaceAsset.h  FontFamilyAsset.cpp  FontFamilyAsset.h  MeshAsset.h
Engine/Core/: Engine.cpp  Engine.h  Event.h  Export.h  IFileSystemWatcher.h  Log.cpp  Log.h  LogSystem.cpp  LogSystem.h  TimeProvider.h
Engine/Input/: IInputConsumer.h  IInputFocusable.h  Input.cpp  Input.h  InputSystem.cpp  InputSystem.h  KeyCode.cpp  KeyCode.h
Engine/Instance/: Instance.cpp  Instance.h  ObjectInstance.cpp  ObjectInstance.h  Reflection.cpp  Reflection.h  System.cpp  System.h  UUID.h  World.h
Engine/Math/: AABB.h  Color.h  ColorSequence.h  ConvexHull.h  Cuboid.h  Math.h  NumberSequence.h  Octree.h  Plane.h  Polygon.h  Quaternion.h  Random.h  Ray.h  Rect.h  Sphere.h  Spline.h  Transform.h  UDim.h  UDim2.h  Vector2.h  Vector3.h  Vector4.h
Engine/Math/pcg/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
Engine/Network/: NetworkServer.h
Engine/Physics/: Attachment.cpp  Attachment.h  BoxCollider.h  ColliderBase.h  PhysicalProperties.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.cpp  RigidBody.h
Engine/Physics/Constraints/: ConstraintBase.h  HingeConstraint.h
Engine/Platform/: PlatformWindow.cpp  PlatformWindow.h  Viewport.cpp  Viewport.h
Engine/Player/: Player.h  PlayerSystem.h
Engine/Rendering/: Camera.h  IRenderable.h  IRenderer.h  TextSystem.cpp  TextSystem.h
Engine/Replication/: NetworkClient.h  NetworkPeer.cpp  NetworkPeer.h  Replicator.h
Engine/Scripting/: LuaDataType.h  LuaState.cpp  LuaState.h  Script.h  StateContext.h
Engine/Shaders/: ui_varying.def.sc  vs_ui.sc
Engine/UI/: LayerCollector.h  UIBase.cpp  UIBase.h  UIButton.cpp  UIButton.h  UIFrame.cpp  UIFrame.h  UILayer.cpp  UILayer.h  UIScreen.cpp  UIScreen.h  UIScreenLayer.cpp  UIScreenLayer.h  UISurface.cpp  UISurface.h  UISurfaceLayer.cpp  UISurfaceLayer.h  UISystem.cpp  UISystem.h
Engine/Utility/: LRUCache.h
GameServerWindows/: CMakeLists.txt  main.cpp
MacClient/: CMakeLists.txt  main.cpp
MacClient/Input/: MacInputHandler.h  MacInputHandler.mm
MacClient/Mac/: MacKeyCodeMapping.h  MacPlatformWindow.h  MacPlatformWindow.mm
ReflectionGenerator/: CMakeLists.txt  GeneratedTemplate.h  ReflectionGenerator.vcxproj  ReflectionGenerator.vcxproj.filters  parse.bat  parse.py  pyvenv.cfg
WindowsClient/: CMakeLists.txt  WindowsClient.vcxproj  main.cpp
WindowsClient/Input/: RawInputHandler.cpp  RawInputHandler.h
WindowsClient/Windows/: KeyCodeMapping.h  WindowsFileSystemWatcher.cpp  WindowsFileSystemWatcher.h  WindowsPlatformWindow.cpp  WindowsPlatformWindow.h
ports/bgfx/: portfile.cmake  vcpkg.json
